--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "kwizz",
+  "name": "Kwizz.guru",
   "icons": [
     {
       "src": "nerd.png",
@@ -18,7 +18,6 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
