build settings adjusted

--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,17 +1,15 @@
 {
-    "providers": [
-        "awscloudformation"
-    ],
-    "projectName": "quizit3",
-    "version": "3.0",
-    "frontend": "javascript",
-    "javascript": {
-        "framework": "react",
-        "config": {
-            "SourceDir": "src",
-            "DistributionDir": "public",
-            "BuildCommand": "npm run-script build",
-            "StartCommand": "npm run-script start"
-        }
+  "providers": ["awscloudformation"],
+  "projectName": "quizit3",
+  "version": "3.0",
+  "frontend": "javascript",
+  "javascript": {
+    "framework": "react",
+    "config": {
+      "SourceDir": "src",
+      "DistributionDir": "build",
+      "BuildCommand": "npm run-script build",
+      "StartCommand": "npm run-script start"
     }
+  }
 }
