--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-bootstrap-table2-filter": "^1.3.1",
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^16.13.1",
+    "react-ga": "^2.7.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27"
