--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@aws-amplify/analytics": "^3.1.7",
-    "@aws-amplify/api": "^3.1.7",
-    "@aws-amplify/auth": "^3.2.4",
-    "@aws-amplify/core": "^3.2.4",
-    "@aws-amplify/datastore": "^2.0.8",
-    "@aws-amplify/interactions": "^3.1.7",
-    "@aws-amplify/predictions": "^3.1.7",
-    "@aws-amplify/storage": "^3.1.7",
-    "@aws-amplify/ui": "^2.0.2",
-    "@aws-amplify/ui-react": "^0.2.3",
-    "@aws-amplify/xr": "^2.1.7",
+    "@aws-amplify/analytics": "3.1.13-unstable.5",
+    "@aws-amplify/api": "3.1.13-unstable.5",
+    "@aws-amplify/auth": "3.2.10-unstable.5",
+    "@aws-amplify/core": "3.2.10-unstable.5",
+    "@aws-amplify/datastore": "2.1.3-unstable.5",
+    "@aws-amplify/interactions": "3.1.13-unstable.5",
+    "@aws-amplify/predictions": "3.1.13-unstable.5",
+    "@aws-amplify/storage": "3.2.3-unstable.5",
+    "@aws-amplify/ui": "2.0.3-unstable.168",
+    "@aws-amplify/ui-react": "0.2.8-unstable.9",
+    "@aws-amplify/xr": "2.1.13-unstable.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -53,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-test-renderer": "^16.13.1"
   }
 }
