--- a/package.json
+++ b/package.json
@@ -4,22 +4,23 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@aws-amplify/analytics": "3.1.13-unstable.5",
-    "@aws-amplify/api": "3.1.13-unstable.5",
-    "@aws-amplify/auth": "3.2.10-unstable.5",
-    "@aws-amplify/core": "3.2.10-unstable.5",
-    "@aws-amplify/datastore": "2.1.3-unstable.5",
-    "@aws-amplify/interactions": "3.1.13-unstable.5",
-    "@aws-amplify/predictions": "3.1.13-unstable.5",
-    "@aws-amplify/storage": "3.2.3-unstable.5",
-    "@aws-amplify/ui": "2.0.3-unstable.168",
-    "@aws-amplify/ui-react": "0.2.8-unstable.9",
-    "@aws-amplify/xr": "2.1.13-unstable.5",
+    "@aws-amplify/analytics": "^3.1.15",
+    "@aws-amplify/api": "^3.1.15",
+    "@aws-amplify/auth": "^3.2.12",
+    "@aws-amplify/core": "^3.3.2",
+    "@aws-amplify/datastore": "^2.2.2",
+    "@aws-amplify/interactions": "^3.1.15",
+    "@aws-amplify/predictions": "^3.1.15",
+    "@aws-amplify/storage": "^3.2.5",
+    "@aws-amplify/ui": "^2.0.2",
+    "@aws-amplify/ui-react": "^0.2.8",
+    "@aws-amplify/xr": "^2.1.15",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "array-move": "^2.2.1",
-    "aws-amplify-react": "^4.1.7",
+    "aws-amplify": "^3.0.13",
+    "aws-amplify-react": "^4.1.12",
     "bootstrap": "^4.4.1",
     "history": "^4.10.1",
     "react": "^16.13.1",
@@ -29,6 +30,7 @@
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
+    "react-image-file-resizer": "^0.2.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27"
