--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "aws-amplify-react": "^4.1.12",
     "bootstrap": "^4.4.1",
     "history": "^4.10.1",
+    "immutability-helper": "^3.1.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-bootstrap-table-next": "^4.0.0",
     "react-bootstrap-table2-filter": "^1.3.1",
     "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
     "react-image-file-resizer": "^0.2.3",
