--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-image-file-resizer": "^0.2.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-select": "^3.1.0",
     "react-spring": "^8.0.27"
   },
   "scripts": {
