--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.1",
     "react-ga": "^2.7.0",
+    "react-helmet": "^6.1.0",
     "react-image-file-resizer": "^0.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
